--- a/livros/src/main/resources/application.properties
+++ b/livros/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.application.name=Biblioteca
-
-spring.datasource.url=jdbc:h2:mem:livros
+spring.application.name=books
+spring.datasource.url=jdbc:h2:mem:meubanco;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+
+# Cria as tabelas automaticamente
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# (Opcional) Escrever no console as queries SQL
+spring.jpa.show-sql=true
